--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
   width: 100%;
   height: 100%;
   background: #f5f5f5; /* Grey color */
-  z-index: 9999;
+  z-index: 10;
   transition: opacity 0.5s ease-in-out;
 }
 
